# nanogpt

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: train_gpt2.json
data/fineweb/: prepare.py
data/openwebtext/: prepare.py
scripts/: bigram.py  gpt.py  gpt2.py  nanogpt.ipynb  train.py
